--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "lucide-react": "^0.456.0",
+        "react-chartjs-2": "^5.3.0",
+        "recharts": "^2.15.1",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7"
     }
